0.9.0
* The "downloader" app which can download the entire blockchain in less than 2 hours
* Major performance improvement of UTX reindexing (rebuilding) functionality

0.8.7
* Added a special wallet "ADRESSES" that contains the address book (for MakeTx tab)
* Support for "virgin" addresses in the wallet files (put space before the address).
  (virgin addresses are hidden the wallet tab as long as their balance is zero)

0.8.6
* Added "Load TX" to the top menu in WebUI
* Allow for hidden wallets (start filename with ".") and a nested sub-wallets (up to 3 levels deep)
* Fix: after changing a label in a wallet file it get changed in the unspent list as well
* Fix: the list of unspent outputs is now being sorted properly (by block height)
* "wallet -d" prints number of (yet) unsigned inputs
* "versigmsg" renamed to "btcversig" and some new features were added
* Expire external IPs after one hour from last seen
* Added new fields "Nonce", "TxCount", and "TxOffset" to "btc.Block" (set in "btc.NewBlock")

0.8.5
* From now on every "payment.zip" contains also the unsigned raw transaction file ("tx2sign.txt")
* Added a cache for address balances to speed up switching between wallets
* Building the wallet for Windows does not require mingw anymore (now it uses msvcrt.dll for _getch)

0.8.4
* Support for JoinCoin sort of transaction in the wallet
* We do not add mined txs to TransactionsRejected map (or at least try to)
* WebUI cosmetic here and there...
* Transaction and EC signing parts moved from the wallet app to the btc package
* Added "-raw <filename>" and "-d <filename>" command to the wallet (to sign, decode transaction file)
* Fixed decoding of P2SH-type addresses in btc.NewAddrFromPkScript()
* Added support for relay=0 received from peers (do not send tx invs to them)

0.8.3
* Support for GOCOIN_WALLET_CONFIG env variable (enforces the wallet's config file)
* Added CFG.PayCommandName so you could e.g. make it .bat or .sh (the default is "pay_cmd.txt")