@@ -1,6 +1,7 @@
 0.9.0
 * The "downloader" app which can download the entire blockchain in less than 2 hours
 * Major performance improvement of UTX reindexing (rebuilding) functionality
+* Bugfix: the blance cache could cause panic when two outputs were being spent from the same address
 
 0.8.7
 * Added a special wallet "ADRESSES" that contains the address book (for MakeTx tab)
